--- a/initial_setup.org
+++ b/initial_setup.org
@@ -1,10 +1,3 @@
-* File: early-init.el
-#+BEGIN_SRC emacs-lisp
-  (require 'package)
-  (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/"))
-  (package-initialized)
-#+END_SRC
-
 * GNU-ELPA
 ** AucTeX
 Install by:
@@ -20,11 +13,11 @@ Install by:
 
 ** Magit
 Install by:
-  M-x package-install latex-preview-pane
+  M-x package-install magit
 
 ** Multiple Cursors
 Install by:
-  M-x package-install latex-preview-pane
+  M-x package-install multiple-cursors
 
 ** Rainbow-delimiters
 Install by:
